--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -15,13 +15,13 @@ body {
 .menu {
     background: #97d6ff;
     float: left;
-    width: 150px;
-    height: 250px;
+    width: 15%;
+    height: 85%;
 }
 
 .body {
     background: #f7f0bb;
-    height: 250px;
+    height: 85%;
     padding-left: 200px;
 }
 
