--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -10,24 +10,42 @@ body {
     background: #676767;
     text-align: center;
     color: #fff;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    height: 50px;
 }
 
 .menu {
     background: #97d6ff;
     float: left;
-    width: 15%;
-    height: 85%;
+    width: 20%;
+    height: 100%;
+    padding-top: 51px;
 }
 
 .body {
     background: #f7f0bb;
-    height: 85%;
-    padding-left: 200px;
+    height: 100%;
+    padding-left: 10px;
+    padding-top: 51px;
+    overflow-y: auto;
+    top: 50px;
+    bottom: 30px;
+    right: 0;
+    left: 0;
+    overflow: auto;
 }
 
 .footer {
     background: #fed7a0;
     text-align: center;
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    height: 30px;
 }
 .error {
     padding: 15px;
